# resource-bundle-translator

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  languages.py  pyproject.toml  pytest.ini  requirements.txt  translation.py  translation_request.py  translation_service.py  translation_text.py
.claude/: remediation.json  template.json
.claude/commands/: eval.md  team-review.md
.github/workflows/: gradle-plugin.yml  python.yml
app/: translation_config.json  translator_app.py
cli/: resource_bundle_generator.py  resource_bundle_git.py
config/: config_loader.py
docs/: adapters.md  gradle-plugin.md  importers.md  personas.md  providers.md  qa-layer.md  reviewer-ui.md  termbase.md  translation-memory.md  validators.md
gradle-plugin/: README.md  build.gradle.kts  settings.gradle.kts
gradle-plugin/src/functionalTest/kotlin/com/egoge/ainemo/gradle/: AiNemoTranslatePluginFunctionalTest.kt
models/: language_model.py  model_types.py
models/facebook/: nllb_model.py
models/marian_mt/: marian_mt_model.py
models/open_ai/: open_ai_model.py
scratch/: nllb_scratch.py  opus_scratch.py
specs/: README.md  ROADMAP.md  pitch-template.md
specs/pitches/: 0001-foundation.md
specs/pitches/0000-rebrand-stabilize/: hill.json  pitch.md
specs/pitches/0001-foundation/: hill.json  pitch.md
specs/pitches/0002-providers-gradle/: hill.json  pitch.md
specs/pitches/0003-kuzu-termbase/: hill.json  pitch.md
specs/pitches/0004-termbase-importer-pipeline/: hill.json  pitch.md
specs/pitches/0005-reviewer-ui-qa-layer/: hill.json  pitch.md
specs/retros/: cooldown-after-02.md  cooldown-after-03.md  cooldown-after-04.md  cooldown-after-05.md  cycle-0.md  cycle-2.md  cycle-3.md
src/ainemo/: __init__.py
src/ainemo/_legacy/: __init__.py  languages.py  translation.py  translation_request.py  translation_service.py
src/ainemo/app/: __init__.py  _ids.py  config.py  extensions.py  translator_app.py
src/ainemo/app/qa/: signals.py
src/ainemo/app/store/: __init__.py  import_skips.py
src/ainemo/app/templates/: _index.html  base.html
src/ainemo/app/templates/imports/: _row.html  list.html
src/ainemo/app/templates/personas/: _preview.html  detail.html  list.html
src/ainemo/app/templates/promote/: _row.html  list.html
src/ainemo/app/templates/qa/: _row.html  list.html  segment.html
src/ainemo/app/templates/termbase/: _term_row.html  edit.html  list.html
src/ainemo/app/views/: __init__.py  imports.py  personas.py  promote.py  qa.py  termbase.py
src/ainemo/cli/: __init__.py  __main__.py  app_commands.py  commands.py  daemon.py  resource_bundle_generator.py  resource_bundle_git.py  termbase_commands.py
src/ainemo/config/: __init__.py  config_loader.py  translation_config.json
src/ainemo/core/: __init__.py  icu.py  pipeline.py  segment.py
src/ainemo/core/adapters/: __init__.py  base.py  gettext_po.py  i18next_json.py  java_properties.py  xliff.py
src/ainemo/core/termbase/: __init__.py  _ids.py  base.py  glossary.py  persona_loader.py  promotion.py
src/ainemo/core/termbase/kuzu/: __init__.py  store.py
src/ainemo/core/termbase/sources/: __init__.py  _ids.py  base.py  csv_source.py  jsonl_source.py  loader.py  mapping.py
src/ainemo/core/termbase/tbx/: __init__.py  exporter.py  importer.py
src/ainemo/core/tm/: __init__.py  base.py  sqlite.py
src/ainemo/core/validators/: __init__.py  base.py  forbidden.py  icu.py  length.py  placeholder.py
src/ainemo/personas/: casual.yaml  formal.yaml  software-ui.yaml
src/ainemo/providers/: __init__.py  _errors.py  _ids.py  _retry.py  _usage_log.py  base.py  model_types.py  router.py
src/ainemo/providers/anthropic/: __init__.py  _client.py  _prompts.py  anthropic_provider.py
src/ainemo/providers/nllb/: __init__.py  _client.py  _languages.py  nllb_model.py  nllb_provider.py
src/ainemo/providers/ollama/: __init__.py  _client.py  _prompts.py  ollama_provider.py
src/ainemo/providers/openai/: __init__.py  _client.py  _prompts.py  open_ai_model.py  openai_provider.py
src/ainemo/providers/opus/: __init__.py  _client.py  _languages.py  marian_mt_model.py  opus_provider.py
src/ainemo/utils/: __init__.py  analyze_last_commit.py
test/: facebook_test.py  simple_test.py  test.py  test_translation_cli.py  translator_api.py  two_models.py
tests/: termbase_stub.py
tests/benchmarks/: cycle-3-tbx-roundtrip.md  test_provider_benchmark.py  test_tm_lookup_benchmark.py
tests/e2e/: test_pipeline_e2e.py
tests/fixtures/tbx/: pathological-missing-definitions.tbx  pathological-mixed-langsec-order.tbx  pathological-multi-domain.tbx  pathological-unsupported-elements.tbx  weblate-multi-lang.tbx  weblate-multi-term-per-lang.tbx  weblate-software-en-de.tbx  weblate-with-definitions.tbx  weblate-with-pos-register.tbx
tests/integration/: test_app_imports.py  test_app_personas.py  test_app_promote.py  test_app_qa.py  test_app_smoke.py  test_app_termbase.py  test_pipeline_with_termbase.py  test_tbx_roundtrip.py  test_termbase_cli.py  test_termbase_import_csv_cli.py  test_termbase_import_jsonl_cli.py
tests/unit/: test_anthropic_provider.py  test_cli.py  test_config_loader.py  test_csv_source.py  test_daemon.py  test_field_mapping.py  test_gettext_po_adapter.py  test_glossary.py  test_i18next_json_adapter.py  test_icu.py  test_import_skip_store.py  test_java_properties_adapter.py  test_jsonl_source.py  test_kuzu_termbase.py  test_legacy_shim_helper.py  test_loader_concept_ids.py  test_marian_preserve_glossary.py  test_nllb_provider.py  test_ollama_provider.py  test_openai_lazy_init.py  test_openai_provider.py  test_opus_provider.py  test_persona_loader.py  test_pipeline.py  test_promotion.py  test_promotion_write_accepted_candidate.py  test_qa_signals.py  test_retry.py  test_router.py  test_router_translate_with.py  test_segment.py  test_single_row_source.py  test_skipped_row_extension.py  test_sqlite_tm.py  test_tbx_exporter.py  test_tbx_importer.py  test_termbase_source_protocol.py  test_termbase_update_term.py  test_translation_cli.py  test_translation_request_envelope.py  (+5 more)
utils/: analyze_last_commit.py
(+5 files in other folders)
