[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "ai-nemo"
version = "0.1.0"
description = "Networked Engine for Multilingual Ontologies — knowledge-graph-grounded localization for software."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "EGOGE" }]
keywords = [
    "localization",
    "i18n",
    "translation",
    "knowledge-graph",
    "termbase",
    "resource-bundle",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Internationalization",
    "Topic :: Software Development :: Localization",
]
dependencies = [
    "transformers",
    "flask",
    "torch",
    "sacremoses",
    "sentencepiece",
    "openai",
    "anthropic>=0.40",
    "ollama>=0.4",
    # Cycle 1 — Foundation: bundle adapters and translation memory.
    "polib>=1.2",                # gettext .po reading/writing
    "lxml>=5.0",                 # XLIFF 2.0 read/write
    "sentence-transformers>=2.7", # MiniLM embeddings for fuzzy TM lookup
    "numpy>=1.26",               # cosine similarity for TM scan
    # Cycle 3 — Concept-oriented termbase. Kuzu is an embedded graph DB;
    # wheels are published for Py 3.10/3.11/3.12 on linux-x86_64,
    # macos-arm64, and win-amd64. Range pinned to the 0.10–0.11 line
    # tested on the cycle-3 matrix; bump on cooldown when a Kuzu minor
    # release lands and the schema-bootstrap idempotency test still
    # passes on every matrix cell.
    "kuzu>=0.10,<0.12",
    # Cycle 3 S4 — persona system. Pydantic v2 enforces the persona
    # YAML schema (per pitch Q2: 4 mandatory + 4 optional fields,
    # `provider_hints` rejected via `extra='forbid'`). PyYAML reads
    # the on-disk *.yaml files. Both are widely-used; the version
    # ranges target the supported py-3.10/3.11/3.12 matrix.
    "pydantic>=2.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-cov",
]

[project.scripts]
nemo = "ainemo.cli:main"

[project.urls]
Homepage = "https://github.com/gosha70/resource-bundle-translator"
Repository = "https://github.com/gosha70/resource-bundle-translator"
Roadmap = "https://github.com/gosha70/resource-bundle-translator/blob/main/specs/ROADMAP.md"
"Cycle 1 pitch" = "https://github.com/gosha70/resource-bundle-translator/blob/main/specs/pitches/0001-foundation/pitch.md"

[tool.hatch.build.targets.wheel]
packages = ["src/ainemo"]

[tool.hatch.build.targets.sdist]
include = [
    "src/ainemo",
    "specs",
    "tests",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

# ---------------------------------------------------------------------------
# Linting (ruff). All in-tree code is linted; the cycle-0/1/2 cleanup is
# complete and there are no legacy carve-outs left. ``scratch`` is the
# explicit no-lint sandbox for token-preservation experiments
# (see scratch/README.md).
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["scratch"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

# ---------------------------------------------------------------------------
# Typechecking (mypy strict per AGENTS.md § Stack). All in-tree modules are
# strict-typed after cycle-2 scope 5d removed the cycle-0 legacy carryover.
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
strict = true
mypy_path = "src"
explicit_package_bases = true
namespace_packages = true

# Vendor libraries without type stubs. Per-library stubs land alongside
# integrations as they harden.
[[tool.mypy.overrides]]
module = [
    "transformers.*",
    "torch.*",
    "sacremoses",
    "sentencepiece",
    "openai.*",
    "anthropic.*",
    "ollama.*",
    "flask.*",
    "polib",
    "lxml.*",
    "sentence_transformers.*",
    "numpy.*",
    "kuzu",
    "kuzu.*",
    "yaml",
    "yaml.*",
]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest (also configured in pytest.ini for legacy compatibility).
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "7.0"
python_files = ["test_*.py"]
testpaths = ["tests"]
# Default collection excludes the benchmark suite — those tests have
# performance thresholds (router overhead, UsageLog stats latency)
# that depend on the host's CPU + IO and are not deterministic
# enough for the per-PR CI gate. Run them explicitly with
# ``pytest -m benchmark`` (the marker docs already say "manual run").
# Without this exclusion CI's full ``pytest`` run picks up the
# 100k-record stats benchmark and flakes on slower runners.
addopts = "-ra --strict-markers --strict-config -m 'not benchmark'"
markers = [
    "unit: fast, isolated unit test",
    "integration: real subsystems (sqlite, embedding model)",
    "e2e: full pipeline run on a real bundle fixture",
    "slow: opt-in slow test",
    "benchmark: performance benchmark, manual run",
]

[tool.coverage.run]
source = ["src/ainemo"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
